--- a/luxury-accommodations.html
+++ b/luxury-accommodations.html
@@ -28,7 +28,7 @@
           <div class="main-nav">
             <ul>
               <li>
-                <a href="luxury-accommodations.html"> Luksusmajoituksia </a>
+                <a href="#"> Luksusmajoituksia </a>
               </li>
               <li>
                 <a href="#"> Kasinohotellit </a>
@@ -608,33 +608,6 @@ hotellit
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
 
-    <script>
-        $('.link-wrap').slick({
-  centerMode: false,
-  arrows: false,
-  dots:true,
-  slidesToShow: 4,
-  responsive: [
-    {
-      breakpoint: 768,
-      settings: {
-        arrows: false,
-        centerMode: true,
-        centerPadding: '40px',
-        slidesToShow: 3
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        arrows: false,
-        centerMode: true,
-        centerPadding: '40px',
-        slidesToShow: 1
-      }
-    }
-  ]
-});
-    </script>
+
   </body>
 </html>
