--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                 <a href="luxury-accommodations.html"> Luksusmajoituksia </a>
               </li>
               <li>
-                <a href="#"> Kasinohotellit </a>
+                <a href="casino-hotels.html"> Kasinohotellit </a>
               </li>
               <li>
-                <a href="#"> Kaupunkihotellit </a>
+                <a href="city-hotels.html"> Kaupunkihotellit </a>
               </li>
               <li>
-                <a href="#"> Luonnonkaunis retriittejä </a>
+                <a href="scenic-retreats.html"> Luonnonkaunis retriittejä </a>
               </li>
               <li>
-                <a href="#"> Perinteiset hotellit </a>
+                <a href="traditional-hotels.html"> Perinteiset hotellit </a>
               </li>
             </ul>
             <div class="close">
@@ -149,7 +149,7 @@ hotellit
                         </h2>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 col-md-6">
                             <div class="pick-wrap">
                                 <div class="pick-img">
                                     <img src="assets/images/picks-1.jpg" alt="">
@@ -167,7 +167,7 @@ hotellit
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 col-md-6">
                             <div class="pick-wrap">
                                 <div class="pick-img">
                                     <img src="assets/images/picks-2.jpg" alt="">
@@ -185,7 +185,7 @@ hotellit
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 col-md-6">
                             <div class="pick-wrap">
                                 <div class="pick-img">
                                     <img src="assets/images/picks-3.jpg" alt="">
@@ -483,7 +483,7 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
       <div class="site-footer ptb-50">
         <div class="container">
             <div class="row">
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="footer-logo">
                       <a href="index.html">
                         <img src="assets/images/logo.png" alt="">
@@ -518,7 +518,7 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
                       </ul>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="footer-heading">
                     <h4>
                         Hyödyllisiä linkkejä
@@ -527,34 +527,34 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
                   <div class="footer-links">
                     <ul>
                       <li>
-                        <a href="#">
+                        <a href="index.html">
                             Kotisivu
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="luxury-accommodations.html">
                             Luksusmajoituk
                             sia
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="casino-hotels.html">
                             Kasinohotellit
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="city-hotels.html">
                             Kaupunkihotellit
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="scenic-retreats.html">
                             Luonnonkaunis
                             retriittejä
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="traditional-hotels.html">
                             Perinteiset
 hotellit
                         </a>
@@ -562,7 +562,7 @@ hotellit
                     </ul>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                 <div class="footer-heading">
                   <h4>
                     Tukea
@@ -572,18 +572,18 @@ hotellit
                   <ul>
                     
                     <li>
-                      <a href="#">
+                      <a href="contact-us.html">
                         Ota yhteyttä
                       </a>
   
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="privacy-policy.html">
                         Tietosuojakäytäntö
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="term-and-conditions.html">
                         Käyttöehdot
                       </a>
                     </li>
@@ -616,20 +616,29 @@ hotellit
   slidesToShow: 4,
   responsive: [
     {
-      breakpoint: 768,
+      breakpoint: 1201,
       settings: {
         arrows: false,
-        centerMode: true,
-        centerPadding: '40px',
+        // centerMode: true,
+        // centerPadding: '40px',
         slidesToShow: 3
       }
     },
     {
-      breakpoint: 480,
+      breakpoint: 992,
       settings: {
         arrows: false,
-        centerMode: true,
-        centerPadding: '40px',
+        // centerMode: true,
+        // centerPadding: '40px',
+        slidesToShow: 2
+      }
+    },
+    {
+      breakpoint: 600,
+      settings: {
+        arrows: false,
+        // centerMode: true,
+        // centerPadding: '40px',
         slidesToShow: 1
       }
     }
