--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="link-wrap" >
                 <div class="link-box" style="background-image: url(assets/images/link-card1.jfif);">
-                    <a href="#">
+                    <a href="luxury-accommodations.html">
                     <h3>
                         Luksusmajoituk
 sia
@@ -105,21 +105,21 @@ sia
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card2.jpg);">
-                    <a href="#">
+                    <a href="casino-hotels.html">
                     <h3>
                         Kasinohotellit
                     </h3>
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card3.jpg);">
-                    <a href="#">
+                    <a href="city-hotels.html">
                     <h3>
                         Kaupunkihotellit
                     </h3>
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card4.jpeg);">
-                    <a href="#">
+                    <a href="scenic-retreats.html">
                     <h3>
                         Luonnonkaunis
 retriittejä
@@ -127,7 +127,7 @@ retriittejä
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card5.avif);">
-                    <a href="#">
+                    <a href="traditional-hotels.html">
                     <h3>
                         Perinteiset
 hotellit
@@ -243,7 +243,7 @@ rauhallista pakopaikkaa.
                         <div class="col-md-6">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
-                                    <img src="assets/images/choose1.png" alt="">
+                                    <img src="assets/images/choose2.png" alt="">
                                 </div>
                                 <div class="choose-text">
                                     <h4>
@@ -266,7 +266,7 @@ rauhallista pakopaikkaa.
                         <div class="col-md-6">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
-                                    <img src="assets/images/choose1.png" alt="">
+                                    <img src="assets/images/choose3.png" alt="">
                                 </div>
                                 <div class="choose-text">
                                     <h4>
@@ -290,7 +290,7 @@ rauhallista pakopaikkaa.
                         <div class="col-md-6">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
-                                    <img src="assets/images/choose1.png" alt="">
+                                    <img src="assets/images/choose4.png" alt="">
                                 </div>
                                 <div class="choose-text">
                                     <h4>
